# mcpelauncher-linux

./: CMakeLists.txt
mcpe/: Api.h  FilePathManager.h  IMinecraftApp.h  Level.h  LevelSettings.h  Minecraft.h  MinecraftEventing.h  OpsList.h  ResourcePack.h  ServerInstance.h  UUID.h  Whitelist.h  types.cpp
src/: DedicatedServerMinecraftApp.h  LinuxAppPlatform.cpp  dedi.cpp
src/server/: server.cpp
